# old_repos

./: README.md
2chat/: .gitignore  pom.xml
2chat-master/: README.md  pom.xml
ChatBot/: models.py  process_data.py
ChatBot-main/: .gitignore  chatbot.py  load_and_trim_data.py
DeepLearningWithPytorch/: .gitignore
EmojiDetector/: requirements.txt  run_model.py
EmojiDetector-main/: .gitignore  README.md  define_model.py  requirements.txt  train_model.py
Exploratory-master/: .gitignore
FaceRecognition/: .gitignore  face_recognition.py
FaceRecognition-main/: embedding.py  recognition.py
HandsonPyTorchRL/: gym.ipynb
HandsonPyTorchRL-master/: actor critic.ipynb  ddpg.ipynb  function-approximators.ipynb  monte-carlo.ipynb
TrafficSign/: .gitignore
TrafficSign-main/: gui.py  model.py  train_model.py
coco-pytorch-lightning/: .gitignore  main.py
coco-pytorch-lightning-master/: README.md
coco_train_densenet201fpn-master/: .gitignore  main.py  main_continue_training.py
deep_learning_with_python/: README.md
deep_learning_with_python-master/: .gitignore  report.txt
deep_recurrent_q_network/: ReplayBuffer.py  TwoModelSingleGPU.py  mish.py
deep_recurrent_q_network-main/: Agent.py  Model.py
drlho/: .gitignore  LICENSE
drlho-master/: README.md
drlwpython-book/: 00_solve-frozen-lake.ipynb  01-blackjack-mc-control.ipynb  02_frozen_lake_temporal_differences.ipynb  02_frozenlake-td-control.ipynb  05_tensorflow2-keras.ipynb  07_policy-gradient-cart-pole.ipynb  10_evolution_strategy_example.ipynb  README.md
drlwpython-book-main/: 00_frozen-lake.ipynb  00_gym_envs.ipynb  01-blackjackwith-mc.ipynb  03-advertisement-banner-mab.ipynb  03_multi_arm_bandit_problem.ipynb  04_xor-function.ipynb  05-tensorflow1.ipynb  05_tensorflow-mnist.ipynb  06_dqn-pacman.ipynb  08_a3c-mountain-car-climbing.ipynb  09_ddpg-pendulum.ipynb
edx-haskell-fp-master/jam-sessions-church-numerals/: jam-sessions-church-numerals.cabal
edx-haskell-fp-master/lectures-and-labs/: lectures-and-labs.cabal
edx-haskell-fp-master/lectures-and-labs/app/: Main.hs
edx-haskell-fp-master/lectures-and-labs/src/Course/Book/: AbstractMachine.hs  CountdownProblem.hs  InteractiveProgrammingLife.hs  TautologyChecker.hs
edx-haskell-fp-master/lectures-and-labs/src/Course/Labs/: ListComprehensionEx.hs  RecursiveFunctions.hs
edx-haskell-fp-master/lectures-and-labs/src/Course/Lectures/: FunctionsBasics.hs  FunctionsIntro.hs  HigherOrderFunctionsClasses.hs  ListComprehensions.hs  Recursion.hs  Test.hs
edx-haskell-fp-master/lectures-and-labs/src/Course/Lectures/ParsesAndMonads/: ParsersPart1.hs  ParsersPart2FirstMonad.hs  ParsersPart3.hs
(+393 files in other folders)
