name:                lectures-and-labs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lectures-and-labs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip, Course.Lectures.ParsesAndMonads.ParsersPart1, Course.Lectures.ParsesAndMonads.ParsersPart2FirstMonad,
                       Course.Book.TypeDefinitions,
                       Course.Book.TautologyChecker,Course.Book.CountdownProblem, Course.Book.InteractiveProgrammingIntro,
                       Course.Book.InteractiveProgrammingHangman, Course.Book.InteractiveProgrammingNim, Course.Book.MonadsAndTheory
                       Course.Book.InteractiveProgrammingLife, Course.Book.TicTacToe, Course.Book.MonadicParsing
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lectures-and-labs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lectures-and-labs
  default-language:    Haskell2010

test-suite lectures-and-labs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lectures-and-labs
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lectures-and-labs
